Fixed header text not showing propperly on iPhone.

--- a/style/header.css
+++ b/style/header.css
@@ -35,7 +35,7 @@
 @media only screen and (max-width: 650px) {
   .header a {
     font-size: 5vw;
-    margin: auto 15px;
+    margin: auto 10px;
   }
 }
 
